# Shinobi-HQ

./: 00-Recovery Kit.md  README.md
Hokage/: .gitignore  .pre-commit-config.yaml  AI_REBOOT_PROMPT.txt  ALPHA_CHARTER.md  ALPHA_DAILY_REVIEW_TEMPLATE.md  ALPHA_FAILURE_CRITERIA.md  ALPHA_PROGRAM_RULEBOOK.md  ALPHA_SUCCESS_CRITERIA.md  ALPHA_WEEKLY_REVIEW_TEMPLATE.md  ARCHITECTURE_MAP.md  BROKER_RECONCILIATION_WALKTHROUGH.md  C1_SQLITE_MIGRATION_PLAN.md  CLI_WALKTHROUGH.md  COMMAND_CENTER_REQUIREMENTS.md  COMMON_STOCKS_AND_UNCOMMON_PROFITS_AUDIT.md  COMMON_STOCKS_AND_UNCOMMON_PROFITS_PLAYBOOK.md  COVERAGE_DEBT.md  DAILY_TRADING_COACH_AUDIT.md  DOCUMENTATION_INTEGRITY_REPORT.md  Decisions.md  FIRST_DAY_OPERATIONAL_READINESS_REPORT.md  GLOBAL_OPPORTUNITY_ENGINE.md  HANDOVER.md  HOKAGE_ALPHA_LAUNCH_CLEARANCE_REPORT.md  HOKAGE_ALPHA_READINESS_REPORT.md  Hokage_Continuation_Prompt.txt  Hokage_Resume_Prompt.txt  INR_CAPITAL_MIGRATION_AUDIT.md  INTELLIGENT_INVESTOR_AUDIT.md  KNOWLEDGE_CONSOLIDATION_REPORT.md  KNOWLEDGE_MODULE_AUDIT.md  Launch Hokage.bat  MARKET_WIZARDS_AUDIT.md  MARKET_WIZARDS_PLAYBOOK.md  Memory.md  NEWEY_WEST_WALKTHROUGH.md  ONE_UP_ON_WALL_STREET_AUDIT.md  ONE_UP_ON_WALL_STREET_PLAYBOOK.md  PHASE_5A.2_VERIFICATION_REPORT.md  PHASE_5_ALPHA_START_SNAPSHOT.md  (+21 more)
Hokage/.githooks/: pre-commit
Hokage/config/: .env.example  README.md  broker_registry.json  hokage.yaml  market_intelligence.json  portfolio_budget.json
Hokage/config/bots/: README.md
Hokage/config/brokers/: alpaca.json  coindcx.json  oanda.json  zerodha.json
Hokage/data/: README.md
Hokage/docs/: STRATEGY_DOJO_PLAN.md  architecture.md
Hokage/docs/api/: README.md
Hokage/docs/architecture/: bot-relationships.md  overview.md  workflow.md
Hokage/dummy/: brain.json  hokage.db
Hokage/journal/: strategy_notifications.jsonl
Hokage/logs/: README.md
Hokage/scripts/: README.md  mock_trade.py  paper_dry_run.py  test_conversation.py  verify_hygiene.py  wake_hokage.py
Hokage/src/: README.md
Hokage/tests/: README.md  conftest.py  test_brain_hermeticity.py  test_no_mock_sniffing_in_src.py
(+334 files in other folders)
