[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hokage"
version = "0.1.0"
description = "Personal AI commander orchestrating specialist trading bots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kiteconnect>=4.2.0",
    "keyring>=24.0.0",
    "psutil>=5.9.0",
    "Flask>=3.0.0",
    "pytest>=8.0.0"
]

[project.scripts]
hokage = "hokage.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
